--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
     "cSpell.words": [
-        "Sudoo",
-        "WMXPY",
         "mocharc",
-        "tshook"
+        "Sudoo",
+        "tshook",
+        "WMXPY",
+        "wojtekmaj"
     ]
 }
