--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
   "homepage": "https://github.com/SudoDotDog/Sudoo-Mocha-Config-React#readme",
   "devDependencies": {
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2"
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5"
   }
 }
