--- a/.mocharc.json
+++ b/.mocharc.json
@@ -3,5 +3,5 @@
         "test/**/*.test.ts",
         "test/**/*.test.tsx"
     ],
-    "loader": "@sudoo/mocha-config-react"
+    "require": "@sudoo/mocha-config-react"
 }
